--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "axios": "^1.9.0",
     "dayjs": "^1.11.13",
+    "radix-ui": "^1.4.3",
     "react": "^19.1.0",
+    "react-call": "^1.8.1",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.1",
